movie controller, exception handling, and basic models implemented
